--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	},
 	"devDependencies": {
 		"@microsoft/api-extractor": "^7.34.8",
+		"@types/jsdom": "^21.0.0",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"@typescript-eslint/eslint-plugin": "^5.58.0",
@@ -52,7 +53,7 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"expect-type": "^0.16.0",
 		"fast-glob": "^3.2.12",
-		"jsdom": "^17.0.0",
+		"jsdom": "^21.0.0",
 		"json5": "^2.2.3",
 		"prettier": "2.3.2",
 		"react": "^18.2.0",
