--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: ['main']
+    branches: ['main', 'v1.2', 'v1.3']
     tags: ['**']
   pull_request:
   workflow_dispatch:
