--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
 		{ "path": "./packages/react-auto" },
 		{ "path": "./packages/react-binding" },
 		{ "path": "./packages/react-binding-ui" },
+		{ "path": "./packages/react-board" },
+		{ "path": "./packages/react-board-dnd-kit" },
+		{ "path": "./packages/react-board-ui" },
 		{ "path": "./packages/react-choice-field" },
 		{ "path": "./packages/react-choice-field-ui" },
 		{ "path": "./packages/react-client" },
