--- a/packages/admin-sandbox/package.json
+++ b/packages/admin-sandbox/package.json
@@ -20,6 +20,9 @@
 	"dependencies": {
 		"@contember/schema": "^1.2.0",
 		"@contember/schema-definition": "^1.2.0",
+		"@dnd-kit/core": "^6.1.0",
+		"@dnd-kit/sortable": "^8.0.0",
+		"@dnd-kit/utilities": "^3.2.2",
 		"lucide-react": "^0.268.0",
 		"react": "^17 || ^18",
 		"react-content-loader": "^6.0.3",
