fixup! feat: add react board

--- a/packages/admin-sandbox/admin/tsconfig.json
+++ b/packages/admin-sandbox/admin/tsconfig.json
@@ -8,5 +8,6 @@
 		{ "path": "../../admin/src" },
 		{ "path": "../../brand/src" },
 		{ "path": "../../layout/src" },
+		{ "path": "../../react-board-ui/src" },
 	]
 }
