--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -211,7 +211,7 @@ jobs:
       - name: Publish
         run: |
           yarn config set npmAuthToken "$NPM_TOKEN"
-          yarn workspaces foreach -pt version "${GITHUB_REF:11}"
+          yarn workspaces foreach -t version "${GITHUB_REF:11}"
           yarn workspaces foreach -pt --no-private npm publish --access public
 
 
